fixed movie carousel getting cut off

--- a/frontend/src/components/Carousel/MovieCarousel/MovieCarousel.css
+++ b/frontend/src/components/Carousel/MovieCarousel/MovieCarousel.css
@@ -4,10 +4,10 @@
 
 .carousel-movie .carousel-control-prev {
   left: -6%;
-  top: -20%;
+  top: -10%;
 }
 
 .carousel-movie .carousel-control-next {
   right: -6%;
-  top: -20%;
+  top: -10%;
 }
