--- a/frontend/src/components/MovieCard/moviecard.module.scss
+++ b/frontend/src/components/MovieCard/moviecard.module.scss
@@ -1,11 +1,9 @@
 $accent-color: #e7e7e7;
 $brand-color: #0096ff;
 $dark-color: #1e1b26;
-
-body {
-  overflow-y: auto;
+.wrapper {
+  transform: translateY(-6%);
 }
-
 .container {
   width: 100%;
   display: flex;
@@ -14,7 +12,6 @@ body {
 }
 
 .main-card-container {
-  transform: translateY(-8%);
   display: inline-block;
   align-items: center;
   justify-content: center;
